<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/showProfileFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/editProfileFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/tripDetailsFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_trip" />
        <item
            android:id="@+id/tripEditFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tripEdit" />

    </group>
</menu>