<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/showProfileFragment">

    <fragment
        android:id="@+id/showProfileFragment"
        android:name="it.polito.mad.carpooling.ShowProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_show_profile" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="it.polito.mad.carpooling.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/tripDetailsFragment"
        android:name="it.polito.mad.carpooling.TripDetailsFragment"
        android:label="@string/menu_trip"
        tools:layout="@layout/fragment_trip_details" />

    <fragment
        android:id="@+id/tripEditFragment"
        android:name="it.polito.mad.carpooling.TripEditFragment"
        android:label="@string/menu_tripEdit"
        tools:layout="@layout/fragment_trip_edit" />


</navigation>